Fixing help modal

--- a/_includes/gbarun.html
+++ b/_includes/gbarun.html
@@ -461,10 +461,29 @@ if (fullscreenParam === 'true') {
   color: #585858;
   text-decoration: none;
 }
+
+
+.button3 {
+	color: white;
+  background: linear-gradient(to right, $purple , $blue-gray);
+	border-radius: 8px;
+	transition: .2s ease-in-out;
+}
 		</style>
 
-			<a href="#help" style="position: absolute; left: 50%; top: 60%; transform: translate(-50%, -50%);"><?xml version="1.0" encoding="utf-8"?>
-				<svg width="20px" height="20px" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg"><title>Help (controls)</title><path d="M256,80A176,176,0,1,0,432,256,176,176,0,0,0,256,80Z" style="fill:none;stroke:#000000;stroke-miterlimit:10;stroke-width:32px"/><path d="M200,202.29s.84-17.5,19.57-32.57C230.68,160.77,244,158.18,256,158c10.93-.14,20.69,1.67,26.53,4.45,10,4.76,29.47,16.38,29.47,41.09,0,26-17,37.81-36.37,50.8S251,281.43,251,296" style="fill:none;stroke:#000000;stroke-linecap:round;stroke-miterlimit:10;stroke-width:28px"/><circle cx="250" cy="348" r="20"/></svg></a>
+			<a href="#help" style="position: absolute; left: 50%; top: 95%; transform: translate(-50%, -50%);" ><button style="background-color: #4CAF50;
+                color: white;
+                padding: 10px 20px;
+                text-align: center;
+                text-decoration: none;
+                display: inline-block;
+                border-radius: 6px;
+                transition: background-color 0.3s ease;
+                background-image: linear-gradient(#ff4747, #f08282);">
+  Help
+</button>
+</a>
+		</a>
 		
 		<div id="help" class="modal1">
 			<div class="modal__content">
