Changing colour of modal text

--- a/_includes/gbarun.html
+++ b/_includes/gbarun.html
@@ -486,7 +486,7 @@ if (fullscreenParam === 'true') {
 		</a>
 		
 		<div id="help" class="modal1">
-			<div class="modal__content">
+			<div class="modal__content" style="color:black!important">
 				<h1>GBA Emulator Help</h1>
 		<h4>Controls</h4>
 				<table>
