--- a/_includes/gbarun.html
+++ b/_includes/gbarun.html
@@ -451,27 +451,20 @@ if (fullscreenParam === 'true') {
     color: #585858;
   }
   i {
-    color: #d02d2c;
+    color: #d02d2c!important;
   }
 }
 .modal__close {
   position: absolute;
   top: 10px;
   right: 10px;
-  color: #585858;
-  text-decoration: none;
+  color: #585858!important;
+  text-decoration: none!important;
 }
 
-
-.button3 {
-	color: white;
-  background: linear-gradient(to right, $purple , $blue-gray);
-	border-radius: 8px;
-	transition: .2s ease-in-out;
-}
 		</style>
 
-			<a href="#help" style="position: absolute; left: 50%; top: 95%; transform: translate(-50%, -50%);" ><button style="background-color: #4CAF50;
+			<a href="#help" style="position: absolute; left: 85%; top: 95%; transform: translate(-50%, -50%);" ><button style="background-color: #4CAF50;
                 color: white;
                 padding: 10px 20px;
                 text-align: center;
