More fixes to help modal

--- a/_includes/gbarun.html
+++ b/_includes/gbarun.html
@@ -464,7 +464,7 @@ if (fullscreenParam === 'true') {
 
 		</style>
 
-			<a href="#help" style="position: absolute; left: 85%; top: 95%; transform: translate(-50%, -50%);" ><button style="background-color: #4CAF50;
+			<a href="#help" style="position: absolute; left: 96%; top: 95%; transform: translate(-50%, -50%);" ><button style="background-color: #4CAF50;
                 color: white;
                 padding: 10px 20px;
                 text-align: center;
@@ -482,7 +482,7 @@ if (fullscreenParam === 'true') {
 			<div class="modal__content" style="color:black!important">
 				<h1>GBA Emulator Help</h1>
 		<h4>Controls</h4>
-				<table>
+				<table style="color:black!important">
 					<tr>
 					<td>Up</td>
 					<td>W</td>
@@ -525,7 +525,7 @@ if (fullscreenParam === 'true') {
 					</tr>
 					</table>
 		
-				<div class="modal__footer">
+				<div class="modal__footer" style="color:black!important">
 					See <a href="https://docs.yeahgames.net">the docs</a> to learn more.
 				</div>
 		
