Fixing full-screen liquid mistake

--- a/_includes/full-gba.html
+++ b/_includes/full-gba.html
@@ -27,6 +27,6 @@
   </style>
 </head>
 <body>
-<iframe allowfullscreen src="https://gba.tools.player.yeahgames.net/published/{{page.url|remove:'https'|remove:'/'|remove:'player.yeahgames.net/games'|remove:':'|remove:'play'|remove:'games'|remove:'details'|remove:'full.html'}}/run?fullscreen=true"></iframe>
+<iframe allowfullscreen src="https://gba.tools.player.yeahgames.net/published/{{page.url|remove:'https'|remove:'/'|remove:'published'|remove:'player.yeahgames.net/games'|remove:':'|remove:'play'|remove:'games'|remove:'details'|remove:'full.html'}}/run?fullscreen=true"></iframe>
 </body>
 </html>
