Testing dynamic/relative includes

--- a/_includes/gbarun.html
+++ b/_includes/gbarun.html
@@ -2,15 +2,15 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<title>yGBA Emulator src</title>
-		<link rel="stylesheet" href="resources/main.css" />
+		<link rel="stylesheet" href="/resources/main.css" />
 		<script src="js/util.js"></script>
-		<script src="js/core.js"></script>
-		<script src="js/arm.js"></script>
-		<script src="js/thumb.js"></script>
-		<script src="js/mmu.js"></script>
-		<script src="js/io.js"></script>
-		<script src="js/audio.js"></script>
-		<script src="js/video.js"></script>
+		<script src="/js/core.js"></script>
+		<script src="/js/arm.js"></script>
+		<script src="/js/thumb.js"></script>
+		<script src="/js/mmu.js"></script>
+		<script src="/js/io.js"></script>
+		<script src="/js/audio.js"></script>
+		<script src="/js/video.js"></script>
 		<script src="js/video/proxy.js"></script>
 		<script src="js/video/software.js"></script>
 		<script src="js/irq.js"></script>
@@ -526,7 +526,7 @@ if (fullscreenParam === 'true') {
 					</table>
 		
 				<div class="modal__footer" style="color:black!important">
-					See <a href="https://docs.yeahgames.net">the docs</a> to learn more.
+					See <a style="color:#ff4747" href="https://docs.yeahgames.net">the docs</a> to learn more.
 				</div>
 		
 				<a href="#" class="modal__close">&times;</a>
