Testing & fixing relative urls (2)

--- a/_includes/gbarun.html
+++ b/_includes/gbarun.html
@@ -11,14 +11,14 @@
 		<script src="/js/io.js"></script>
 		<script src="/js/audio.js"></script>
 		<script src="/js/video.js"></script>
-		<script src="js/video/proxy.js"></script>
-		<script src="js/video/software.js"></script>
-		<script src="js/irq.js"></script>
-		<script src="js/keypad.js"></script>
-		<script src="js/sio.js"></script>
-		<script src="js/savedata.js"></script>
-		<script src="js/gpio.js"></script>
-		<script src="js/gba.js"></script>
+		<script src="/js/video/proxy.js"></script>
+		<script src="/js/video/software.js"></script>
+		<script src="/js/irq.js"></script>
+		<script src="/js/keypad.js"></script>
+		<script src="/js/sio.js"></script>
+		<script src="/js/savedata.js"></script>
+		<script src="/js/gpio.js"></script>
+		<script src="/js/gba.js"></script>
 		<script src="resources/xhr.js"></script>
 		<script src="resources/biosbin.js"></script>
 
