--- a/_includes/gbarun.html
+++ b/_includes/gbarun.html
@@ -3,7 +3,7 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<title>yGBA Emulator src</title>
 		<link rel="stylesheet" href="/resources/main.css" />
-		<script src="js/util.js"></script>
+		<script src="/js/util.js"></script>
 		<script src="/js/core.js"></script>
 		<script src="/js/arm.js"></script>
 		<script src="/js/thumb.js"></script>
@@ -19,8 +19,8 @@
 		<script src="/js/savedata.js"></script>
 		<script src="/js/gpio.js"></script>
 		<script src="/js/gba.js"></script>
-		<script src="resources/xhr.js"></script>
-		<script src="resources/biosbin.js"></script>
+		<script src="/resources/xhr.js"></script>
+		<script src="/resources/biosbin.js"></script>
 
 		<script>
 			// Check for the fullscreen parameter in the URL
