--- a/resources/main.css
+++ b/resources/main.css
@@ -1,5 +1,5 @@
 body {
-	background: url('bg.png') no-repeat top center, #765490;
+	background: url('bg.png') no-repeat top center, #15181f;
 	text-align: center;
 	margin: 0;
 	color: white;
@@ -116,7 +116,7 @@ a:link, a:visited {
 	right: -1px;
 	width: 6em;
 	padding: 5px;
-	background: #765490;
+	background: #15181f;
 	box-shadow: 0 2px 5px -2px rgba(0, 0, 0, 0.6) inset, -4px -1px 5px -3px black;
 	border-radius: 5px 5px 0 0;
 	border: 1px solid rgba(0, 0, 0, 0.3);
