Adding GTAG to all html pages

--- a/_includes/gbarun.html
+++ b/_includes/gbarun.html
@@ -1,7 +1,12 @@
+---
+---
 <html>
 	<head>
+
+		{% include gtag.html %}
+
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-		<title>yGBA Emulator src</title>
+		<title>yEAh GBA emulator | YGP</title>
 		<link rel="stylesheet" href="/resources/main.css" />
 		<script src="/js/util.js"></script>
 		<script src="/js/core.js"></script>
