--- a/_includes/console.html
+++ b/_includes/console.html
@@ -1,5 +1,8 @@
+---
+---
 <html>
 <head>
+	{% include gtag.html %}
 <script src="/js/util.js"></script>
 <script src="/js/core.js"></script>
 <script src="/js/arm.js"></script>
