--- a/_includes/debugger.html
+++ b/_includes/debugger.html
@@ -1,5 +1,9 @@
+---
+---
 <html>
 <head>
+		{% include gtag.html %}
+
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>gbajs2 Debugger</title>
 <script src="js/util.js"></script>
