--- a/_includes/full-gba.html
+++ b/_includes/full-gba.html
@@ -3,6 +3,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+{% include gtag.html %}
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Full-screen player | YGP</title>
 <link rel="icon" type="image/x-icon" href="https://cdn.yeahgames.net/img/branding/logos/default/logo.png">
